--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongodb": "^4.6.0"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^4.6.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "startDev": "nodemon server.js",
     "start": "node server.js"
   },
   "name": "suds2buds",
@@ -25,6 +29,7 @@
   },
   "homepage": "https://github.com/MattWeinstein/suds2buds#readme",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.19"
   }
 }
