startdev changed to node

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "passport-local": "^1.0.0"
   },
   "scripts": {
-    "startDev": "nodemon server.js",
+    "startDev": "node server.js",
     "start": "node server.js"
   },
   "name": "suds2buds",
