--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -10,7 +11,8 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.6.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "session": "^0.1.0"
   },
   "scripts": {
     "start": "node server.js"
