--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DB_STRING = 'mongodb+srv://mattw412:Weinstein88@suds2buds.pxon0ka.mongodb.net/?retryWrites=true&w=majority'
-SESSION_SECRET ='hello'
+SESSION_SECRET ='bananabanana'
