--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "^4.6.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "dotenv": "^16.0.3",
   },
   "scripts": {
     "start": "node server.js"
@@ -33,7 +34,6 @@
   },
   "homepage": "https://github.com/MattWeinstein/suds2buds#readme",
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "nodemon": "^1.4.1"
   }
 }
