--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.3"
   },
   "scripts": {
     "start": "node server.js"
