--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongodb": "^4.6.0",
-    "passport": "^0.6.0",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0",
-    "dotenv": "^16.0.3"
+    "session": "^0.1.0"
   },
   "scripts": {
     "start": "node server.js"
